# CxxSpec

./: .gitignore  CMakeLists.txt  CxxSpec.kdev4  SpecificationVisitorMock.hpp  main.cpp  proposeCommitMessage.sh  testAssertions.cpp  testAssertions.hpp  testConsoleSpecificationObserver.cpp  testConsoleSpecificationObserver.hpp  testExecutor.cpp  testExecutor.hpp  testLinker1.cpp  testLinker2.cpp  testSpecification.cpp  testSpecification.hpp  testSpecificationRegistry.cpp  testSpecificationRegistry.hpp
CxxSpec/: Assert.hpp  AssertionFailed.hpp  ConsoleSpecificationObserver.hpp  CxxSpec.hpp  ISpecificationObserver.hpp  ISpecificationVisitor.hpp  Messages.hpp  SectionGuard.hpp  Should.hpp  Specification.hpp  SpecificationExecutor.hpp  SpecificationRegisterer.hpp  SpecificationRegistry.hpp
example/: example.cpp
test/: AssertionTestingClasses.hpp  SpecificationObserverMock.hpp  main.cpp  testAssertions.cpp  testConsoleSpecificationObserver.cpp  testExecutor.cpp  testLinker1.cpp  testSpecification.cpp  testSpecificationRegistry.cpp
